add changes in the design

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <!-- Metric Cards -->
           <div class="grid grid-cols-1 gap-6 mb-6 md:grid-cols-3">
             <!-- Completion Rate Card -->
-            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] border-bottom  bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Completion Rate
@@ -371,7 +371,7 @@
             </div>
 
             <!-- Onboarding Time Card -->
-            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] border-bottom  bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Average Onboarding Time
@@ -393,7 +393,7 @@
             </div>
 
             <!-- SLA Compliance Card -->
-            <div class="dash-bordee p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
+            <div class="dash-bordee p-5 flex flex-col min-h-[140px] border-bottom  bg-white rounded-xl shadow-sm">
               <div class="flex-1">
                 <h3 class="text-sm font-medium text-gray-500">
                   Response Time vs SLA
@@ -431,8 +431,6 @@
                     class="absolute bottom-0 z-20 p-0 flex items-center gap-4 border border-gray-200 w-[max-content] scrollable-legend  rounded-2xl">
                   </div>
                 </div>
-
-                <!-- Custom Scrollable Legend -->
 
               </div>
             </div>
