--- a/overall-success.html
+++ b/overall-success.html
@@ -365,7 +365,7 @@
 
 
                     <div
-                        class="flex flex-col justify-between gap-6 p-3 bg-white shadow md:p-6 lg:flex-row main-div rounded-2xl">
+                        class="flex flex-col justify-between gap-6 p-3 bg-white shadow-none md:shadow md:p-6 lg:flex-row main-div rounded-2xl">
                         <!-- KPI Cards -->
                         <div class="flex flex-col gap-6 left-card text-fonts w-full lg:max-w-[400px] lg:min-w-[400px]">
                             <div>
@@ -393,9 +393,13 @@
                         </div>
 
                         <!-- Chart Card -->
-                        <div
-                            class="w-full max-w-[700px] h-[350px] sm:h-[350px] lg:h-[500px]  relative flex justify-normal items-center">
-                            <div id="pie-chart-container"></div>
+                        <div class="flex flex-col items-start justify-center w-full gap-2 md:gap-0 sm:flex-row">
+                            <div id="pie-chart-container" class="max-w-[700px] w-full h-[350px] lg:h-[500px]"></div>
+
+                            <!-- Scrollable legend -->
+                            <div id="pieLegends"
+                                class="flex flex-row gap-2 md:gap-0  md:flex-col items-start w-full max-w-[100%] md:max-w-[220px] max-h-[200px] md:max-h-[500px] overflow-y-auto scroll-smooth pr-2">
+                            </div>
                         </div>
                     </div>
 
