--- a/verification-failure.html
+++ b/verification-failure.html
@@ -365,7 +365,7 @@
 
                     <div class="bg-white shadow main-div rounded-2xl ">
                         <!-- Tabs -->
-                        <div class="flex gap-2 mb-6">
+                        <div class="flex gap-2 mb-2">
                             <button
                                 class="px-3 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow md:px-6 md:py-2">
                                 Success Rate
@@ -384,32 +384,42 @@
                                 <div id="bard-chart" class="w-full text-left"></div>
                             </div>
 
-                            <!-- Pie Chart Card -->
-                            <div
-                                class="relative bg-white w-full p-0 md:p-6 flex-1 min-[350px] md:min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform rounded">
-                                Animated grid background
+                            <!-- Pie Chart + Scrollable Legend Layout -->
+                            <div class="flex flex-col w-full gap-6 lg:flex-row">
+                                <!-- Pie Chart Card -->
                                 <div
-                                    class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] animate-[gridMove_20s_linear_infinite]">
+                                    class="relative bg-white w-full p-0 md:p-6 flex-1 min-[350px] md:min-h-[550px] overflow-hidden border border-transparent transition transform rounded">
+
+                                    <!-- Grid background -->
+                                    <div
+                                        class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] animate-[gridMove_20s_linear_infinite]">
+                                    </div>
+
+                                    <!-- Orbs -->
+                                    <div
+                                        class="absolute top-[15%] right-[10%] w-20 h-20 bg-[radial-gradient(circle,rgba(0,212,255,0.2),rgba(0,106,255,0.1))] rounded-full blur-[20px] animate-[float_6s_ease-in-out_infinite]">
+                                    </div>
+                                    <div
+                                        class="absolute bottom-[20%] left-[15%] w-15 h-15 bg-[radial-gradient(circle,rgba(255,0,110,0.2),rgba(131,56,236,0.1))] rounded-full blur-[15px] animate-[float_8s_ease-in-out_infinite_reverse]">
+                                    </div>
+
+                                    <!-- Glass overlay -->
+                                    <div
+                                        class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded border border-white/5">
+                                    </div>
+
+                                    <!-- Chart Container -->
+                                    <div id="pies-chart"
+                                        class="relative z-10 w-full rounded-[30px] bg-white/5 border border-white/5">
+                                    </div>
                                 </div>
-                                <!-- Orbs -->
-                                <div
-                                    class="absolute top-[15%] right-[10%] w-20 h-20 bg-[radial-gradient(circle,rgba(0,212,255,0.2),rgba(0,106,255,0.1))] rounded-full blur-[20px] animate-[float_6s_ease-in-out_infinite]">
-                                </div>
-                                <div
-                                    class="absolute bottom-[20%] left-[15%] w-15 h-15 bg-[radial-gradient(circle,rgba(255,0,110,0.2),rgba(131,56,236,0.1))] rounded-full blur-[15px] animate-[float_8s_ease-in-out_infinite_reverse]">
-                                </div>
-                                <!-- Glass overlay -->
-                                <div
-                                    class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded border border-white/5">
-                                </div>
-                                <!-- Pie Chart Container -->
-                                <div id="pies-chart"
-                                    class="relative z-10 w-full rounded-[30px] bg-white/5 border border-white/5"></div>
-                                <!-- Legend -->
-                                <div
-                                    class="absolute z-20 grid grid-cols-2 gap-4 transform -translate-x-1/2 bottom-6 left-1/2">
+
+                                <!-- Dynamic Scrollable Legend -->
+                                <div id="pieLegend3"
+                                    class="flex flex-row gap-2 md:gap-0  md:flex-col items-start w-full max-w-[100%] md:max-w-[220px] max-h-[200px] md:max-h-[500px] overflow-y-auto scroll-smooth pr-2">
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
