add changes in the text

--- a/settings.html
+++ b/settings.html
@@ -24,8 +24,10 @@
             class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
                 <div class="flex items-center gap-2">
-                    <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
-                    <span class="font-bold text-gray-800 sidebar-label">IDBox™</span>
+                    <a href="/index.html" title="Dashboard" class="flex items-start gap-1">
+                        <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
+                        <span class="font-[500] text-gray-800 sidebar-label pt-[1px]">IDBox™</span>
+                    </a>
                 </div>
                 <button id="collapseBtn" class="p-1 rounded-full hover:bg-gray-100">
                     <svg id="collapseIcon" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-500" fill="none"
