--- a/index.html
+++ b/index.html
@@ -305,10 +305,13 @@
     <div class="flex flex-col flex-1 h-full overflow-hidden">
       <!-- Mobile Header -->
       <header class="flex items-center justify-between px-4 py-3 bg-white border-b md:hidden">
-        <div class="flex items-center gap-2">
-          <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
-          <span class="font-semibold text-gray-800">IDBox™</span>
-        </div>
+
+        <a href="/index.html" title="Dashboard" class="flex items-start gap-1">
+          <div class="flex items-center gap-2">
+            <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
+            <span class="font-semibold text-gray-800">IDBox™</span>
+          </div>
+        </a>
         <button onclick="openMobileMenu()" class="p-1 rounded hover:bg-gray-100">
           <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
